--- a/src/blog/static/blog/CSS/main.css
+++ b/src/blog/static/blog/CSS/main.css
@@ -20,3 +20,21 @@ body {
 .dropdown-menu .dropdown-item {
     text-align: right;
 }
+
+.bg-secondary {
+    background-color: #666 !important;
+}
+
+.bg-light {
+
+    background-color: #ccc !important;
+}
+
+
+a.text-secondary {
+    text-decoration: none;
+}
+
+a.text-secondary:hover {
+    text-decoration: underline;
+}
